--- a/styles/style.css
+++ b/styles/style.css
@@ -231,7 +231,7 @@ h1 {
 }
 
 .start-page .inner-wrapper {
-  padding: 7.5vh 0;
+  padding: 4.5vh 0;
 }
 
 .start-page-content-box {
@@ -379,7 +379,7 @@ input[type=checkbox]:focus + label {
 
 button {
   font-size: 2rem;
-  width: 45%;
+  width: 65%;
   padding: 25px 0;
   margin: 50px auto 0 auto;
   display: block;
@@ -411,11 +411,10 @@ button:focus {
 
 @media (max-height: 700px) {
   button {
-    font-size: 1.5rem;
+    font-size: 2rem;
     padding: 20px 0;
   }
   .categories label {
-    font-size: 0.75rem;
     padding: 20px 15px;
   }
 }
@@ -435,21 +434,17 @@ button:focus {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 90%;
   }
   .categories label {
     margin: 10px 0;
-    font-size: 1rem;
   }
   button {
     margin: 10px auto 0 auto;
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 }
 
@@ -460,6 +455,9 @@ button:focus {
   }
   .selector-area {
     margin-top: 25px;
+  }
+  .categories {
+    width: 100%;
   }
 }
 
@@ -503,7 +501,7 @@ button:focus {
     padding: 3vh 0;
   }
   .categories label {
-    font-size: 0.75rem;
+    font-size: 1.25rem;
     padding: 20px 15px;
   }
 }
@@ -513,11 +511,11 @@ button:focus {
     padding: 0;
   }
   .categories label {
+    font-size: 1.1rem;
     padding: 17px 15px;
   }
   button {
     padding: 20px 0;
-    font-size: 1.25rem;
   }
 }
 
